# malachite

./: .gitignore  README.md  config.example.toml  make-database.sql  pyproject.toml
malachite/: __init__.py  __main__.py  config.py  database.py  irc.py  settings.py  util.py
