[project]
name = "malachite"
description = "email domain banlist manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "cachetools>=5.5.0",
    "dnspython>=2.7.0",
    "ircrobots>=0.6.6",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "malachite.__version__"}

[tool.pyright]
reportPrivateImportUsage = "none"
