[project]
name = "malachite"
description = "email domain banlist manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "cachetools>=5.5.0",
    "dnspython>=2.7.0",
    "ircrobots>=0.6.6",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.29.1",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "types-cachetools>=5.5.0.20240820",
]

[tool.setuptools.dynamic]
version = {attr = "malachite.__version__"}

[tool.pyright]
reportPrivateImportUsage = "none"

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
